<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="280dp"
        android:layout_marginEnd="250dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="250dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/contentDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/author_editText"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/Title_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="text"
        android:maxLines="1"
        android:text="@string/example_title"
        app:layout_constraintBottom_toTopOf="@+id/author_textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/author_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_autor"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintTop_toTopOf="@+id/author_editText"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/author_editText"
        app:layout_constraintLeft_toRightOf="@+id/imageButton"
        app:layout_constraintVertical_bias="0.47" />

    <EditText
        android:id="@+id/date_editText"
        android:layout_width="162dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="date"
        android:text="@string/example_date"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toTopOf="@+id/page_textView"
        app:layout_constraintLeft_toRightOf="@+id/imageButton"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/page_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="numberDecimal"
        android:text="@string/example_page"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintLeft_toRightOf="@+id/imageButton"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/publiser_editText"
        android:layout_width="177dp"
        android:layout_height="37dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="text"
        android:text="@string/example_publisher"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toTopOf="@+id/date_textView"
        app:layout_constraintLeft_toRightOf="@+id/imageButton"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/author_editText"
        android:layout_width="168dp"
        android:layout_height="33dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        android:text="@string/example_author"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toTopOf="@+id/publiser_textView"
        app:layout_constraintLeft_toRightOf="@+id/imageButton"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/date_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_data"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/date_editText"
        app:layout_constraintLeft_toRightOf="@+id/imageButton"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/publiser_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_publisher"
        android:layout_marginBottom="-1dp"
        app:layout_constraintBottom_toTopOf="@+id/publiser_editText"
        app:layout_constraintLeft_toRightOf="@+id/imageButton"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/page_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detalis_page"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/page_editText"
        app:layout_constraintLeft_toRightOf="@+id/imageButton"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_description"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/editText9"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="348dp"
        android:layout_height="189dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

</android.support.constraint.ConstraintLayout>
