<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:longClickable="true"
    android:orientation="horizontal"
    android:weightSum="1">

    <ImageView
        android:id="@+id/book_imageView"
        android:layout_width="63dp"
        android:layout_height="69dp"
        android:layout_weight="0.88"
        android:clickable="false"
        app:srcCompat="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="319dp"
        android:layout_height="69dp"
        android:layout_weight="0.99"
        android:clickable="false"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/example_title" />

        <TextView
            android:id="@+id/author_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/example_author" />

        <TextView
            android:id="@+id/date_text_View"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/example_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Notification.Time" />
    </LinearLayout>

</LinearLayout>